# opportunity-backend

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  createsuperuser.py  django-entrypoint.sh  docker-compose.yml  lint.sh  pyproject.toml  requirements.txt  setup.bat  setup.sh  template.config.yml
.github/workflows/: codeql-analysis.yml  main.yml
src/: check_config_vars.py  createsuperuser.py  manage.py  utils.py
src/administration/: admin.py  admin_site.py  apps.py  models.py  serializers.py  urls.py  views.py
src/administration/migrations/: 0001_initial.py  0002_auto_20201220_1834.py  0002_auto_20201220_1950.py  0002_auto_20210126_2253.py  0002_auto_20210206_2145.py  0002_examplemodel.py  0002_newsletter.py  0003_auto_20201212_1620.py  0003_auto_20201220_2006.py  0003_auto_20210130_1945.py  0003_auto_20210503_1630.py  0003_userprofile.py  0004_auto_20201220_2203.py  0004_auto_20210503_1633.py  0004_news.py  0004_opportunitycategory_wanttohelp.py  0004_organization.py  0004_partner.py  0004_user_is_email_confirmed.py  0005_auto_20201212_1833.py  0005_auto_20201216_1308.py  0005_auto_20201218_1906.py  0005_auto_20201220_1645.py  0005_delete_wanttohelp.py  0006_merge_20201219_0114.py  0006_opportunity_is_published.py  0006_organization_bla.py  0006_partner.py  0007_auto_20201219_0118.py  0007_merge_20201219_1525.py  0008_remove_organization_bla.py  0009_opportunity.py  0010_auto_20201219_1620.py  0011_auto_20201219_1640.py  0012_merge_20201219_2005.py  0013_partner.py
src/authentication/: backends.py  serializers.py  social_serializers.py  urls.py  utils.py  views.py
src/authentication/registration/: app_settings.py  models.py  serializers.py  urls.py  views.py
src/common/: admin.py  admin_site.py  constants.py  models.py  utils.py
src/main/: urls.py
src/main/settings/: __init__.py  base.py  dev.py  production.py
src/media/: .gitkeep
src/staticfiles/: .gitkeep
src/templates/: .gitkeep
src/templates/admin/: base.html  index.html
src/templates/authentication/email/: base_message.html  email_confirmation_message.html  email_confirmation_signup_message.html  email_confirmation_signup_subject.html  email_confirmation_subject.html  password_reset_key_message.html  password_reset_key_subject.html
src/website/: admin.py  constants.py  models.py  serializers.py  urls.py  views.py
src/website/migrations/: 0001_initial.py  0002_auto_20201220_2006.py  0002_auto_20201221_1453.py  0003_auto_20201220_2210.py  0003_auto_20201221_1455.py  0004_auto_20201221_1455.py  0005_auto_20201221_1510.py  0006_auto_20201221_1518.py  0007_setting.py  0008_auto_20201223_2324.py  0009_auto_20210126_2253.py  0010_auto_20210130_1945.py
